Sugati/src/objects/Questionnaire_Answer__c.object
<CustomObject>
    <description>Answers submitted by clients</description>
    <fields>
        <fullName>H_S_Defect_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by Appssential in October 2015 so that a report can be run on defects only.</description>
        <label>H&amp;S Defect Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picklist_Answer__c</fullName>
        <formula>QA_Questionnaire_Answer_Option__r.Name</formula>
        <label>Picklist Answer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Answer__c</fullName>
        <label>Open Text Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA_Other__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA_Questionnaire_Answer_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire Answer Option</label>
        <referenceTo>Questionnaire_Answer_Options__c</referenceTo>
        <relationshipLabel>Questionnaire Answers</relationshipLabel>
        <relationshipName>Questionnaire_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Questionnaire_Question__c</fullName>
        <label>Questionnaire Question</label>
        <referenceTo>Questionnaire_Question__c</referenceTo>
        <relationshipLabel>Questionnaire Answers</relationshipLabel>
        <relationshipName>Questionnaire_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QA_Questionnaire__c</fullName>
        <label>Questionnaire</label>
        <referenceTo>Questinnaire__c</referenceTo>
        <relationshipLabel>Questionnaire Answers</relationshipLabel>
        <relationshipName>Questionnaire_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QQ_Translated_Answer__c</fullName>
        <label>Translated Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <formula>QA_Questionnaire_Question__r.QQ_Question__c</formula>
        <label>Question Text</label>
        <type>Text</type>
    </fields>
    <label>Questionnaire Answer</label>
    <nameField>
        <displayFormat>QA-{0000000000}</displayFormat>
        <label>Questionnaire Answer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>